# freetype-bindings

./: .gitignore  README.md  pom.xml
jni/: CMakeLists.txt  build-natives-android.sh  build-natives-linux.sh  build-natives-windows.sh  build-natives.sh
jni/include/: FTBitmap.h  FTFace.h  FTGlyph.h  FTGlyphMetrics.h  FTGlyphSlot.h  FTLibrary.h  FTSize.h  FTSizeMetrics.h  FTStroker.h  FreeTypeFace.h  FreeTypeGlyphMetrics.h  FreeTypeSize.h  FreeTypeStroker.h  generaloss_freetype_FreeType.h  generaloss_freetype_FreeTypeBitmap.h  generaloss_freetype_FreeTypeGlyph.h  generaloss_freetype_FreeTypeGlyphSlot.h  generaloss_freetype_FreeTypeSizeMetrics.h
jni/src/: FTBitmap.cpp  FTFace.cpp  FTGlyph.cpp  FTGlyphMetrics.cpp  FTGlyphSlot.cpp  FTLibrary.cpp  FTSize.cpp  FTSizeMetrics.cpp  FTStroker.cpp  FreeType.cpp  FreeTypeBitmap.cpp  FreeTypeFace.cpp  FreeTypeGlyph.cpp  FreeTypeGlyphMetrics.cpp  FreeTypeGlyphSlot.cpp  FreeTypeSize.cpp  FreeTypeSizeMetrics.cpp  FreeTypeStroker.cpp  generaloss_freetype_FreeType.cpp  generaloss_freetype_FreeTypeBitmap.cpp  generaloss_freetype_FreeTypeFace.cpp  generaloss_freetype_FreeTypeGlyph.cpp  generaloss_freetype_FreeTypeGlyphMetrics.cpp  generaloss_freetype_FreeTypeGlyphSlot.cpp  generaloss_freetype_FreeTypeSize.cpp  generaloss_freetype_FreeTypeSizeMetrics.cpp  generaloss_freetype_FreeTypeStroker.cpp
jni/toolchains/: windows-i686.cmake  windows-x86_64.cmake
natives/freetype-jni-natives-android/: build.gradle.kts  settings.gradle.kts
natives/freetype-jni-natives-android/src/main/: jniLibs
natives/freetype-jni-natives-linux/: pom.xml
natives/freetype-jni-natives-windows/: pom.xml
src/main/java/generaloss/freetype/: BitMask.java  FTBitmap.java  FTEncoding.java  FTFace.java  FTFaceFlag.java  FTFaceFlags.java  (+30 more)
src/test/java/: FTEncoding.java  Test.java
src/test/resources/jni/: linux  windows
(+12 files in other folders)
